--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ requests==2.31.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
 whitenoise==6.6.0
-dj-database-url==2.1.0 
+dj-database-url==2.1.0
+reynir-correct==4.1.0 
