--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
+asgiref==3.8.1
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+dj-database-url==3.0.0
 Django==4.2.7
-requests==2.31.0
+gunicorn==23.0.0
+icegrams==1.1.3
+idna==3.10
+islenska==1.0.3
+packaging==25.0
+pillow==11.2.1
+pycparser==2.22
 python-dotenv==1.0.0
-gunicorn==21.2.0
-whitenoise==6.6.0
-dj-database-url==2.1.0
-reynir-correct==4.1.0 
+requests==2.31.0
+reynir==3.5.7
+reynir-correct==4.1.0
+setuptools==80.9.0
+sqlparse==0.5.3
+tokenizer==3.4.5
+typing_extensions==4.14.0
+urllib3==2.4.0
+wheel==0.45.1
+whitenoise==6.9.0
