--- a/requirements.txt
+++ b/requirements.txt
@@ -23,4 +23,4 @@ typing_extensions==4.14.0
 urllib3==2.4.0
 wheel==0.45.1
 whitenoise==6.9.0
-# Updated for PWA deployment - 2025-06-04
+# Updated for PWA deployment with fixes - 2025-06-04 10:30
