Force fresh deployment to fix loading issue

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,4 @@ urllib3==2.4.0
 wheel==0.45.1
 whitenoise==6.9.0
 # Updated for PWA deployment with fixes - 2025-06-04 10:30
+# Deployment check Wed Jun  4 16:09:14 GMT 2025
